# api_fft_cnn

./: .gitignore  Audio Classification (CNN).ipynb  Pretrained_Models_Summary_Updated.docx  README.md  api_fconv.py  audio_cnn_torch.py  download_cats.sh  fcnn.py  hello.py  img2npy.py  inital_approach.py  pyproject.toml  requirements.txt
