[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.7"
dependencies = [
    "fft-conv-pytorch>=1.2.0",
    "jupyter>=1.1.1",
    "librosa==0.9.1",
    "line-profiler>=4.2.0",
    "matplotlib>=3.9.2",
    "numpy<2",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "tensorflow[and-cuda]>=2.14.0",
    "torch>=2.0.1",
    "tqdm>=4.67.1",
]
